# aas-core-codegen

./: .gitignore  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  check_init_and_setup_coincide.py  precommit.py  pylint.rc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dev/: pyproject.toml
dev/continuous_integration/: check_help_in_readme.py  check_init_and_pyproject_consistent.py  check_init_and_setup_coincide.py  precommit.py  pylint.rc
dev/dev_scripts/: __init__.py  compare_rendered_regexes_against_source_py.py  convert_file_into_sequence_of_stripped_blocks.py  copy_to_aas_core3_cpp.py  copy_to_aas_core3_java.py  download_latest_aas_core_meta_v3.py  replace-curly-brackets-backslashes-and-four-space-indent.html  replace-curly-brackets-backslashes-and-tab-indent.html  replace-curly-brackets-backslashes-and-two-space-indent.html  run_tests_with_rerecord.py  update_to_aas_core_meta.py
dev/integration_tests/: main.py
dev/integration_tests/input/jsonschema/boilerplate/: main.py
dev/integration_tests/input/jsonschema/snippets/: schema_base.json
dev/live_tests/: __init__.py  common.py  live_test_cpp.py  live_test_csharp.py  live_test_golang.py  live_test_python.py  live_test_typescript.py
dev/test_data/common_meta_models/: constrained_primitives.py  enum.py  list_of_classes.py  list_of_primitives.py  primitive_types.py
dev/test_data/real_meta_models/: aas_core_meta.v3.py
dev/tests/: common.py  test_main.py
dev/tests/cpp/: test_common.py  test_main.py  test_pattern.py  test_verification.py  test_yielding.py
dev/tests/csharp/: live_test_main.py  test_common.py  test_description.py  test_main.py  test_structure.py  test_types.py  test_verification.py
dev/tests/golang/: test_common.py  test_main.py
dev/tests/infer_for_schema/: common.py  test_len_on_properties.py  test_len_on_self.py  test_patterns_on_properties.py  test_patterns_on_self.py  test_property_in_set_of_enumeration_literals.py  test_property_in_set_of_primitives.py
dev/tests/java/: test_common.py  test_description.py  test_main.py
dev/tests/jsonld_context/: test_main.py
dev/tests/opcua/: __init__.py  test_main.py
dev/tests/our_jsonschema/: test_main.py
dev/tests/parse/: test_parse.py  test_retree.py
dev/tests/proto/: test_main.py
dev/tests/python/: test_common.py  test_main.py
dev/tests/python_protobuf/: test_main.py
dev/tests/rdf_shacl/: test_main.py
dev/tests/smoke/: test_main.py
dev/tests/typescript/: test_common.py  test_main.py
dev/tests/xsd/: test_main.py
(+3097 files in other folders)
