[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-core-codegen-dev"
version = "0.0.1"
description = "Develop aas-core-codegen."
requires-python = ">=3.8"

dependencies = [
    "black==22.3.0",
    "mypy==1.9.0",
    "pylint==3.3.8",
    "pydocstyle>=2.1.1,<3",
    "coverage>=4.5.1,<5",
    "pygments>=2,<3",
    "pyinstaller>=4,<5",
    "twine",
    "jsonschema==3.2.0",
    "xmlschema==3.3.1",
    "ssort==0.12.3",
    "requests==2.32.4",
    "types-requests==2.32.4.20250913",
]

[tool.setuptools]
packages = [
    "tests",
    "dev_scripts",
    "continuous_integration",
    "integration_tests",
]

[tool.black]
line-length = 88
target-version = ["py38"]

# NOTE (mristin):
# We put the configuration of mypy and pylint in separate files as it is a nightmare
# to configure them with pyproject.toml not living in the current working directory
# which is the repository root.
